Rough version (no footer) - fix fonts, spacing etc

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,4 @@
+
 /*
 * ----- HEADER STYLE -----
 */
@@ -55,8 +56,9 @@
 /*
 * ----- Headlines STYLE -----
 */
+
 h1{
-  font-family: Georgia;
+  font-family: Georgia, sans-serif;
   font-weight: bold;
   font-size: 40px;
   color: white;
@@ -64,7 +66,7 @@ h1{
 }
 
 h2 {
-  font-family: Georgia;
+  font-family: Georgia, sans-serif;
   font-weight: bold;
   font-size: 30px;
   color: white;
@@ -72,7 +74,7 @@ h2 {
 }
 
 h3{
-  font-family: Georgia;
+  font-family: Georgia, sans-serif;
   font-weight: bold;
   font-size: 20px;
   text-align: left;
@@ -83,6 +85,20 @@ h3.news{
   font-size: 16px;
   font-weight: bold;
   text-align: center;
+}
+
+h5.newzBites{
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+  color: DimGray;
+  margin: 10px;
+  display: block;
+}
+
+p.news, p.new1, p.new2{
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
 }
 
 
@@ -96,7 +112,7 @@ flex: 0 0 200px;
 margin-top: 120px;
 width: 100%;
 height: auto;
-background-color: lightgrey;
+/*background-color: lightgrey;*/
 position: absolute;
 left: 0px;
 right: 0px;
@@ -108,8 +124,8 @@ justify-content: space-between;
 flex-flow: row wrap;
 min-width: 630px;
 max-width: 630px;
-background-color: MediumAquamarine;
-margin: 10px;
+/*background-color: MediumAquamarine;*/
+margin: 8px;
 }
 
 .columnSecond{
@@ -117,7 +133,7 @@ display: flex;
 flex-direction: column;
 min-width: 300px;
 max-width: 300px;
-background-color: MediumAquamarine;
+/*background-color: MediumAquamarine;*/
 margin: 10;
 }
 
@@ -126,7 +142,7 @@ margin: 10;
   flex-direction: column;
   min-width: 240px;
   max-width: 240px;
-  background-color: MediumAquamarine;
+  /*background-color: MediumAquamarine;*/
   margin: 10;
 }
 
@@ -137,8 +153,8 @@ margin: 10;
   flex-direction: column;
   width: 100%;
   height: auto;
-  border: 1px solid red;
-  background-color: yellow;
+  /*border: 1px solid red;*/
+  /*background-color: yellow;*/
   /*margin: 5px;*/
   }
 
@@ -151,8 +167,8 @@ margin: 10;
   flex-wrap: wrap;
   width: 100%;
   height: auto;
-  border: 1px solid red;
-  background-color: orange;
+  /*border: 1px solid red;*/
+  /*background-color: orange;*/
   /*margin: 5px;*/
 }
 
@@ -163,31 +179,38 @@ margin: 10;
   flex-direction: row;
   /*flex-flow: : column nowrap;*/
   flex-wrap: wrap;
-  width: 48%;
+  width: 47%;
   /*height: auto;*/
   min-height: 250px;
   border: 0px solid red;
-  background-color: orange;
+  /*background-color: orange;*/
   margin-top: 5px;
   /*margin: 5px;*/
 }
 
-.newsBites{
+.box{
 display: flex;
-flex-direction: column;
-justify-content: flex-start;
 align-items: center;
+justify-content: center;
+flex-direction: column;
 background-color: WhiteSmoke;
-height: 20px;
-width: 240px;
-border-bottom-color: 1 solid black;
+}
+
+.newzBites{
+  align-self: center;
+  text-align: center;
+  background-color: WhiteSmoke;
+  height: auto;
+  width: 240px;
+  border-bottom: 1px solid black;
+  margin: 0px 0px;
 }
 
 .headline{
   width: 20px;
   height: 30px;
   background-color: pink;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
 }
 
 .mainImage{
@@ -210,6 +233,13 @@ border-bottom-color: 1 solid black;
   width: 240px;
   height: 60px;
   background-color: white;
+
+.bite{
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: black;
+}
+
 }
 
 #fall.image{
